--- a/css/content.css
+++ b/css/content.css
@@ -3,8 +3,16 @@
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
 
-	padding-top: 50px;
-	height: 300px;
-	width: 100%;
-	border-style: none;
+    margin: auto;
+    margin-top: 30px;
+	padding: 30px;
+	height: 500px;
+	width: 80%;
+	font-family: sans-serif;
+	background-color: #dcdcdc;
+	background-color: MediumSeaGreen;
+}
+
+.content h1 {
+	font-size: 40px;
 }
