--- a/css/content.css
+++ b/css/content.css
@@ -6,13 +6,18 @@
     margin: auto;
     margin-top: 30px;
 	padding: 30px;
-	height: 500px;
+	height: 800px;
 	width: 80%;
 	font-family: sans-serif;
-	background-color: #dcdcdc;
-	background-color: MediumSeaGreen;
+	background-color: #1abc9c;
 }
 
 .content h1 {
 	font-size: 40px;
+	font-weight: normal;
+}
+
+.content h3 {
+	font-size: 30px;
+	font-weight: normal;
 }
