--- a/css/content.css
+++ b/css/content.css
@@ -1,7 +1,7 @@
 .content {
-	-webkit-box-shadow: 0 8px 6px -6px #999;
-    -moz-box-shadow: 0 8px 6px -6px #999;
-    box-shadow: 0 8px 6px -6px #999;
+	-webkit-box-shadow: 8px 8px 6px -6px #999;
+    -moz-box-shadow: 8px 8px 6px -6px #999;
+    box-shadow: 8px 8px 6px -6px #999;
 
     margin: auto;
     margin-top: 30px;
