--- a/css/content.css
+++ b/css/content.css
@@ -1,7 +1,7 @@
 .content {
-	-webkit-box-shadow: 8px 8px 6px -6px #999;
-    -moz-box-shadow: 8px 8px 6px -6px #999;
-    box-shadow: 8px 8px 6px -6px #999;
+	-webkit-box-shadow: 8px 8px 20px -6px #888;
+    -moz-box-shadow: 8px 8px 20px -6px #888;
+    box-shadow: 8px 8px 20px -6px #888;
 
     margin: auto;
     margin-top: 30px;
@@ -10,6 +10,18 @@
 	width: 80%;
 	font-family: sans-serif;
 	background-color: #1abc9c;
+	border-radius: 3px;
+}
+
+.subContent {
+	-webkit-box-shadow: 8px 8px 20px -6px #888;
+    -moz-box-shadow: 8px 8px 20px -6px #888;
+    box-shadow: 8px 8px 20px -6px #888;
+    margin: auto;
+	padding: 30px;
+	display: inline-block;
+	vertical-align: top;
+	border-radius: 3px;
 }
 
 .content h1 {
@@ -18,6 +30,12 @@
 }
 
 .content h3 {
-	font-size: 30px;
+	font-size: 35px;
 	font-weight: normal;
 }
+
+.content .giant {
+	font-size: 80px;
+	font-weight: normal;
+}
+
