--- a/css/skill.css
+++ b/css/skill.css
@@ -4,20 +4,21 @@
 }
 
 #skill li {
-	font-size: 30px;
+	font-size: 25px;
 }
 
 #skill #programmingLanguage{
-
 	padding: 30px;
 	display: inline-block;
 	vertical-align: top;
 	width: 50%;
 
+
 }
 
 #skill #otherSkill{
-
+	padding-top: 40px;
+	padding-bottom: 40px;
 	background-color: #FDD835;
 
 }
