--- a/css/content.css
+++ b/css/content.css
@@ -1,41 +1,54 @@
 .content {
-	-webkit-box-shadow: 8px 8px 20px -6px #888;
-    -moz-box-shadow: 8px 8px 20px -6px #888;
-    box-shadow: 8px 8px 20px -6px #888;
+	-webkit-box-shadow: 0px 3px 5px 0px #000;
+	-moz-box-shadow: 0px 3px 5px 0px #000;
+	box-shadow: 0px 3px 5px 0px #000;
 
     margin: auto;
     margin-top: 30px;
 	padding: 20px;
-	height: 800px;
+	height: 500px;
 	width: 80%;
 	font-family: sans-serif;
 	background-color: #1abc9c;
 	border-radius: 3px;
 }
 
+.content:hover {
+	-webkit-box-shadow: 0px 5px 10px 0px #000;
+	-moz-box-shadow: 0px 5px 10px 0px #000;
+	box-shadow: 0px 5px 10px 0px #000;
+}
+
 .subContent {
-	-webkit-box-shadow: 8px 8px 20px -6px #888;
-    -moz-box-shadow: 8px 8px 20px -6px #888;
-    box-shadow: 8px 8px 20px -6px #888;
+	-webkit-box-shadow: 0px 3px 5px 0px #000;
+	-moz-box-shadow: 0px 3px 5px 0px #000;
+	box-shadow: 0px 3px 5px 0px #000;
     margin: auto;
 	padding: 20px;
 	display: inline-block;
 	vertical-align: top;
 	border-radius: 3px;
+
+}
+
+.subContent:hover {
+	-webkit-box-shadow: 0px 5px 10px 0px #000;
+	-moz-box-shadow: 0px 5px 10px 0px #000;
+	box-shadow: 0px 5px 10px 0px #000;
 }
 
 .content h1 {
-	font-size: 40px;
-	font-weight: normal;
-}
-
-.content h3 {
 	font-size: 35px;
 	font-weight: normal;
 }
 
+.content h3 {
+	font-size: 30px;
+	font-weight: normal;
+}
+
 .content .giant {
-	font-size: 80px;
+	font-size: 60px;
 	font-weight: normal;
 }
 
