--- a/css/content.css
+++ b/css/content.css
@@ -6,6 +6,7 @@
     margin: auto;
     margin-top: 30px;
 	padding: 20px;
+	padding-top: 40px;
 	height: 500px;
 	width: 80%;
 	font-family: sans-serif;
@@ -43,7 +44,7 @@
 }
 
 .content h3 {
-	font-size: 30px;
+	font-size: 25px;
 	font-weight: normal;
 }
 
