--- a/css/content.css
+++ b/css/content.css
@@ -5,7 +5,7 @@
 
     margin: auto;
     margin-top: 30px;
-	padding: 20px;
+	padding: 40px;
 	padding-top: 40px;
 	height: 500px;
 	width: 80%;
@@ -18,6 +18,7 @@
 	-webkit-box-shadow: 0px 5px 10px 0px #000;
 	-moz-box-shadow: 0px 5px 10px 0px #000;
 	box-shadow: 0px 5px 10px 0px #000;
+	transition: 0.3s;
 }
 
 .subContent {
@@ -36,6 +37,8 @@
 	-webkit-box-shadow: 0px 5px 10px 0px #000;
 	-moz-box-shadow: 0px 5px 10px 0px #000;
 	box-shadow: 0px 5px 10px 0px #000;
+	transition: 0.3s;
+	
 }
 
 .content h1 {
