--- a/css/navBar.css
+++ b/css/navBar.css
@@ -1,7 +1,7 @@
 .navBar {
-	-webkit-box-shadow: 0 8px 6px -6px #999;
-    -moz-box-shadow: 0 8px 6px -6px #999;
-    box-shadow: 0 8px 6px -6px #999;
+	-webkit-box-shadow: 0px 3px 5px 0px #000;
+	-moz-box-shadow: 0px 3px 5px 0px #000;
+	box-shadow: 0px 3px 5px 0px #000;
 
 	list-style-type: none;
 	overflow: hidden;
