--- a/css/skill.css
+++ b/css/skill.css
@@ -12,14 +12,37 @@
 	display: inline-block;
 	vertical-align: top;
 	width: 50%;
-
-
-
+	margin-left: 60px;
 }
 
 #skill #otherSkill{
 	padding-top: 15px;
-	padding-bottom: 40px;
+	padding-bottom: 60px;
+	margin-left: 60px;
 	background-color: #FDD835;
 
+}
+
+#skill .outProgress {
+	-webkit-box-shadow: 0px 3px 5px 0px #000;
+	-moz-box-shadow: 0px 3px 5px 0px #000;
+	box-shadow: 0px 3px 5px 0px #000;
+
+	margin: 35px;
+	width: 90%;
+	height: 25px;
+	background-color: #E0E0E0;
+	border-radius: 100px;
+}
+#skill .inProgress {
+	font-size: 20px;
+	height: 100%;
+	background-color: #43A047;
+	border-radius: 100px;
+	text-align: center;
+}
+
+#skill span {
+	position: absolute;
+	left: 360px;
 }
