finish button and textarea; contact style done

--- a/css/skill.css
+++ b/css/skill.css
@@ -31,7 +31,7 @@
 	margin: 35px;
 	width: 90%;
 	height: 25px;
-	background-color: #E0E0E0;
+	background-color: #EEEEEE;
 	border-radius: 100px;
 }
 #skill .inProgress {
