--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,68 @@
 #contact {
-	background-color: #3f729b;
+	background-color: #34465d;
 	color: white;
+	height: auto;
+}
+#contact input, #contact textarea {
+	-webkit-box-shadow: 0px 3px 5px 0px #000;
+	-moz-box-shadow: 0px 3px 5px 0px #000;
+	box-shadow: 0px 3px 5px 0px #000;
+	background-color: #EEEEEE;
+	border: none;
+	border-radius: 3px;
+	box-sizing: border-box;
+	font-size: 20px;
+	padding: 10px;
+	margin: 20px;
+	resize: none;
+}
+#contact input:focus, #contact textarea:focus {
+	-webkit-box-shadow: 0px 5px 10px 0px #000;
+	-moz-box-shadow: 0px 5px 10px 0px #000;
+	box-shadow: 0px 5px 10px 0px #000;
+	background-color: white;
+	transition: 0.3s;
+}
+
+#contact #name {
+	width: 25%;
+}
+#contact #emailAddress {
+	width: 25%;
+
+}
+#contact #content {
+	width: 60%;
+	height: 300px;
+}
+#contact button {
+	-webkit-box-shadow: 0px 3px 5px 0px #000;
+	-moz-box-shadow: 0px 3px 5px 0px #000;
+	box-shadow: 0px 3px 5px 0px #000;
+
+	background-color: #0077B5;
+	color: white;
+	border: none;
+	border-radius: 3px;
+	font-size: 35px;
+	padding: 10px;
+	padding-left: 30px;
+	padding-right: 30px;
+	position: absolute;
+	margin-top: 257px;
+	margin-left: 50px;
+	cursor: pointer;
+}
+
+#contact button::-moz-focus-inner {
+	border: 0;
+}
+
+#contact button:hover {
+	-webkit-box-shadow: 0px 5px 10px 0px #000;
+	-moz-box-shadow: 0px 5px 10px 0px #000;
+	box-shadow: 0px 5px 10px 0px #000;
+	background-color: #00AFF0;
+	color: #333;
+	transition: 0.3s;
 }
