--- a/css/contact.css
+++ b/css/contact.css
@@ -17,9 +17,10 @@
 	resize: none;
 }
 #contact input:focus, #contact textarea:focus {
-	-webkit-box-shadow: 0px 5px 10px 0px #000;
-	-moz-box-shadow: 0px 5px 10px 0px #000;
-	box-shadow: 0px 5px 10px 0px #000;
+	-moz-box-shadow: 0px 0px 8px white;
+	-webkit-box-shadow: 0px 0px 8px white;
+	box-shadow: 0px 0px 8px white;
+
 	background-color: white;
 	transition: 0.3s;
 }
@@ -49,7 +50,7 @@
 	padding-left: 30px;
 	padding-right: 30px;
 	position: absolute;
-	margin-top: 257px;
+	margin-top: 260px;
 	margin-left: 50px;
 	cursor: pointer;
 }
