--- a/css/contact.css
+++ b/css/contact.css
@@ -64,6 +64,6 @@
 	-moz-box-shadow: 0px 5px 10px 0px #000;
 	box-shadow: 0px 5px 10px 0px #000;
 	background-color: #00AFF0;
-	color: #333;
+	color: #34465d;
 	transition: 0.3s;
 }
