--- a/css/contact.css
+++ b/css/contact.css
@@ -67,3 +67,49 @@
 	color: #34465d;
 	transition: 0.3s;
 }
+
+#contact #notification {
+	-webkit-box-shadow: 0px 3px 5px 0px #000;
+	-moz-box-shadow: 0px 3px 5px 0px #000;
+	box-shadow: 0px 3px 5px 0px #000;
+
+	visibility: hidden;
+	background-color: none;
+	color: white;
+	z-index: 98;
+	text-align: center;
+	border-radius: 3px;
+	padding: 10px 50px;
+	position: fixed;
+
+	width: 1000px;
+	left: 50%;
+	margin-left: -560px;
+	top: 100px;
+	font-size: 25px;
+}
+#contact #notification.show {
+	visibility: visible;
+	-webkit-animation: fadein 1s, fadeout 1s 10s;
+	animation: fadein 1s, fadeout 1s 10s;
+}
+
+@-webkit-keyframes fadein {
+	from {top: 0; opacity: 0;} 
+	to {top: 100px; opacity: 1;}
+}
+
+@keyframes fadein {
+	from {top: 0; opacity: 0;}
+	to {top: 100px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+	from {top: 100px; opacity: 1;} 
+	to {top: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+	from {top: 100px; opacity: 1;}
+	to {top: 0; opacity: 0;}
+}
