--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@
 	background-color: #3b5999;
 	margin-top: 60px;
 	color: white;
-	height: auto;
+	height: 400px;
 }
 #home .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
