--- a/css/footer.css
+++ b/css/footer.css
@@ -4,6 +4,18 @@
 	color: white;
 	margin-bottom: 10px;
 	padding: 10px 40px;
+}
+#footer ul {
+	list-style-type: none;
+}
+#footer ul li {
+	font-size: 20px;
+}
+#footer ul ul li {
+	font-size: 18px;
+}
+#footer p {
+	margin-top: 50px;
 	text-align: center;
 }
 #footer a {
