--- a/css/home.css
+++ b/css/home.css
@@ -40,3 +40,73 @@
 	display: inline-block;
 	vertical-align: top;
 }
+
+#contact-icons {
+	position: absolute;
+	top: 400px;
+	right: 250px;
+}
+
+#home button {
+	-webkit-box-shadow: 0px 3px 5px 0px #000;
+	-moz-box-shadow: 0px 3px 5px 0px #000;
+	box-shadow: 0px 3px 5px 0px #000;
+
+	background-color: #0077B5;
+	color: white;
+	border: none;
+	border-radius: 3px;
+	font-size: 35px;
+	padding: 10px 15px 10px 15px;
+	position: relative;
+	margin-right: 10px;
+	cursor: pointer;
+}
+
+#github {
+	position: relative;
+	margin-right: 10px;
+}
+
+#linked-in {
+	position: relative;
+	margin-right: 50px;
+}
+
+#mail {
+	position: relative;
+	margin-right: 90px;
+}
+
+#home button::-moz-focus-inner {
+	border: 0;
+}
+
+#home button:hover {
+	-webkit-box-shadow: 0px 5px 10px 0px #000;
+	-moz-box-shadow: 0px 5px 10px 0px #000;
+	box-shadow: 0px 5px 10px 0px #000;
+	background-color: #00AFF0;
+	color: #34465d;
+	transition: 0.3s;
+}
+
+@-webkit-keyframes fadein {
+	from {top: 0; opacity: 0;} 
+	to {top: 100px; opacity: 1;}
+}
+
+@keyframes fadein {
+	from {top: 0; opacity: 0;}
+	to {top: 100px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+	from {top: 100px; opacity: 1;} 
+	to {top: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+	from {top: 100px; opacity: 1;}
+	to {top: 0; opacity: 0;}
+}
