--- a/css/home.css
+++ b/css/home.css
@@ -63,19 +63,25 @@
 	cursor: pointer;
 }
 
-#github {
+#home #cv {
 	position: relative;
 	margin-right: 10px;
+	padding: 10px 18px 10px 18px;
 }
 
-#linked-in {
+#github {
 	position: relative;
 	margin-right: 50px;
 }
 
-#mail {
+#linked-in {
 	position: relative;
 	margin-right: 90px;
+}
+
+#mail {
+	position: relative;
+	margin-right: 130px;
 }
 
 #home button::-moz-focus-inner {
