--- a/css/content.css
+++ b/css/content.css
@@ -9,7 +9,7 @@
 	padding-top: 40px;
 	height: 500px;
 	width: 80%;
-	font-family: sans-serif;
+	font-family: 'Crimson Text';
 	background-color: #1abc9c;
 	border-radius: 3px;
 }
