--- a/css/footer.css
+++ b/css/footer.css
@@ -4,6 +4,11 @@
 	color: white;
 	margin-bottom: 10px;
 	padding: 10px 40px;
+	-webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
 }
 #footer ul {
 	list-style-type: none;
