--- a/css/home.css
+++ b/css/home.css
@@ -20,7 +20,6 @@
 }
 
 #home .container {
-
 	border-radius: 3px;
 	height: 80px;
     color: black;
@@ -28,12 +27,18 @@
 	/*border: solid 3px;*/
 }
 
+#typeDisplayer {
+	/*border: 3px solid;*/
+	font-size: 35px;
+	height: 10px;
+	width: 100%;
+}
+
 #home img {
 	border-radius: 3px;
 	height: 400px;
 	width: 400px;
 	margin: 0px;
-
 }
 
 #home h1 {
@@ -42,9 +47,20 @@
 }
 
 #contact-icons {
-	position: absolute;
-	top: 400px;
-	right: 250px;
+	position: relative;
+	float: right;
+	top: 50px;
+	right: 100px;
+}
+
+#resume {
+	position: relative;
+	top: 112px;
+	left: 0px;
+}
+
+#home #cv {
+	padding: 10px 18px 10px 18px;
 }
 
 #home button {
@@ -63,24 +79,17 @@
 	cursor: pointer;
 }
 
-#home #cv {
-	position: relative;
-	margin-right: 1038px;
-	padding: 10px 18px 10px 18px;
-}
+
 
 #github {
-	position: relative;
 	margin-right: 50px;
 }
 
 #linked-in {
-	position: relative;
 	margin-right: 90px;
 }
 
 #mail {
-	position: relative;
 	margin-right: 130px;
 }
 
