--- a/css/navBar.css
+++ b/css/navBar.css
@@ -2,12 +2,16 @@
 	-webkit-box-shadow: 0px 3px 5px 0px #000;
 	-moz-box-shadow: 0px 3px 5px 0px #000;
 	box-shadow: 0px 3px 5px 0px #000;
-
+	-webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
 	list-style-type: none;
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
-	background-color: #555;
+	background-color: #212529;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -22,7 +26,7 @@
 .navBar li a {
 	display: block;
 	color: white;
-	padding: 14px 16px;
+	padding: 14px 18px;
 	font-family: sans-serif;
 	font-size: 20px;
 	transition: 0.3s;
@@ -39,21 +43,25 @@
 
 /* The switch - the box around the slider */
 .switch {
+	top: 14px;
+	right: 10px;
+	display: block;
 	position: relative;
 	display: inline-block;
-	width: 43px;
-	height: 23px;
-  }
+	width: 50px;
+	height: 22px;
+	margin-left: 30px;
+}
   
-  /* Hide default HTML checkbox */
-  .switch input {
+/* Hide default HTML checkbox */
+.switch input {
 	opacity: 0;
 	width: 0;
 	height: 0;
-  }
+}
   
-  /* The slider */
-  .slider {
+/* The slider */
+.slider {
 	position: absolute;
 	cursor: pointer;
 	top: 0;
@@ -63,39 +71,39 @@
 	background-color: #ccc;
 	-webkit-transition: .4s;
 	transition: .4s;
-  }
+}
   
-  .slider:before {
+.slider:before {
 	position: absolute;
 	content: "";
 	height: 20px;
 	width: 20px;
 	left: 2px;
-	bottom: 2px;
+	bottom: 1px;
 	background-color: white;
 	-webkit-transition: .4s;
 	transition: .4s;
-  }
+}
   
-  input:checked + .slider {
-	background-color: #2196F3;
-  }
+input:checked + .slider {
+	background-color: #64b5f6;
+}
   
-  input:focus + .slider {
-	box-shadow: 0 0 1px #2196F3;
-  }
+input:focus + .slider {
+	box-shadow: 0 0 1px #64b5f6;
+}
   
-  input:checked + .slider:before {
-	-webkit-transform: translateX(20px);
-	-ms-transform: translateX(20px);
-	transform: translateX(20px);
-  }
+input:checked + .slider:before {
+	-webkit-transform: translateX(27px);
+	-ms-transform: translateX(27px);
+	transform: translateX(27px);
+}
   
   /* Rounded sliders */
-  .slider.round {
+.slider.round {
 	border-radius: 20px;
-  }
+}
   
-  .slider.round:before {
+.slider.round:before {
 	border-radius: 50%;
-  }
+}
